test/cases/compile_errors/attempted_implicit_cast_from_const_T_to_sliceT.zig
export fn entry() void {
    const u: u32 = 42;
    const x: []u32 = &u;
    _ = x;
}

// error
// backend=stage2
// target=native
//
// :3:22: error: expected type '[]u32', found '*const u32'
// :3:22: note: cast discards const qualifier
